# jc

./: .gitignore  .gitmodules  CMakeLists.txt  Doxygen.cfg  alpharun.bat  alpharun.bat~  alpharun.sh  io.jc  jc.sln  res.csv
include/: AST.hpp  IREmitter.hpp  LinkerInvoke.hpp  Module.hpp  ModuleParser.hpp  ModuleRegistry.hpp  ModuleTokenizer.hpp  Parser.hpp  SymbolTable.hpp  SymbolTableStack.hpp  Tokenizer.hpp  TypeParser.hpp  TypeRegistry.hpp  TypeTokenizer.hpp
include/AST/: ASTConstant.hpp  ASTExpression.hpp  ASTNode.hpp  ASTStatement.hpp
include/AST/Constant/: ASTConstantEnumValue.hpp  ASTConstantFloat.hpp  ASTConstantInt.hpp  ASTConstantNullptr.hpp  ASTConstantString.hpp
include/AST/Expression/: ASTBinaryOperator.hpp  ASTFunctionCall.hpp  ASTIdentifier.hpp  ASTInitializerList.hpp  ASTMemberOperator.hpp  ASTUnaryOperator.hpp  ASTVariableAssignment.hpp
include/AST/Statement/: ASTBlock.hpp  ASTDeferredStatement.hpp  ASTEnumDefinition.hpp  ASTEnumParts.hpp  ASTForStatement.hpp  ASTFunctionArgs.hpp  ASTFunctionDeclaration.hpp  ASTFunctionDefinition.hpp  ASTFunctionPointerDefinition.hpp  ASTIfStatement.hpp  ASTImportStatement.hpp  ASTIncludeStatement.hpp  ASTReturnStatement.hpp  ASTStructDeclaration.hpp  ASTStructDefinition.hpp  ASTStructMemberDeclarations.hpp  ASTTypeSystemModStatement.hpp  ASTUnionDefinition.hpp  ASTVariableDeclaration.hpp  ASTWhileStatement.hpp
include/Parsers/: ASTParser.hpp  BuildParser.hpp  ModuleParser.hpp  Parser.hpp  TypeParser.hpp
include/Tokenizers/: ASTTokenizer.hpp  BuildTokenizer.hpp  ModuleTokenizer.hpp  TypeTokenizer.hpp
lib/: glue.jc  gresslib.jc
lib/glue/: CMakeLists.txt  glad.c  glad.h  glue.c  glue.sln
src/: AST.cpp  IREmitter.cpp  LinkerInvoke.cpp  Module.cpp  ModuleParser.cpp  ModuleRegistry.cpp  ModuleTokenizer.cpp  ObjectFileEmitter.cpp  Parser.cpp  SymbolTable.cpp  SymbolTableStack.cpp  Tokenizer.cpp  TypeParser.cpp  TypeRegistry.cpp  TypeTokenizer.cpp  main.cpp
src/AST/: ASTConstant.cpp  ASTExpression.cpp  ASTNode.cpp  ASTStatement.cpp
src/AST/Constant/: ASTConstantEnumValue.cpp  ASTConstantFloat.cpp  ASTConstantInt.cpp  ASTConstantNullptr.cpp  ASTConstantString.cpp
src/AST/Expression/: ASTBinaryOperator.cpp  ASTFunctionCall.cpp  ASTIdentifier.cpp  ASTMemberOperator.cpp  ASTUnaryOperator.cpp  ASTVariableAssignment.cpp
src/AST/Statement/: ASTBlock.cpp  ASTDeferredStatement.cpp  ASTEnumDefinition.cpp  ASTEnumParts.cpp  ASTForStatement.cpp  ASTFunctionArgs.cpp  ASTFunctionDeclaration.cpp  ASTFunctionDefinition.cpp  ASTFunctionPointerDefinition.cpp  ASTIfStatement.cpp  ASTImportStatement.cpp  ASTIncludeStatement.cpp  ASTReturnStatement.cpp  ASTStructDeclaration.cpp  ASTStructDefinition.cpp  ASTStructMemberDeclarations.cpp  ASTTypeSystemModStatement.cpp  ASTUnionDefinition.cpp  ASTVariableDeclaration.cpp  ASTWhileStatement.cpp
src/Parsers/: ASTParser.cpp  BuildParser.cpp  ModuleParser.cpp  Parser.cpp  TypeParser.cpp
src/Tokenizers/: ASTTokenizer.cpp  BuildTokenizer.cpp  ModuleTokenizer.cpp  Tokenizer.cpp  TypeTokenizer.cpp
stdlib/: io.jc  memory.jc  vector.jc
test/: 10.jc  11.jc  12.jc  13.jc  14.jc  15.jc  16.jc  17.jc  18.jc  19.jc  aabb.jc  add.jc  alias_test.jc  allocation_test.jc  array_initializer_list_test.jc  bitwise_ops_test.jc  bool_test.jc  defer_test.jc  divide.jc  enum_test.jc  explicit_cast_test.jc  file_io.jc  file_io_test.jc  float.jc  float_if_test.jc  for_array_test.jc  for_test.jc  helloworld.jc  i8_main.jc  if_else_if_else_else_test.jc  if_else_if_else_test.jc  if_else_test.jc  if_test.jc  implicit_cast_test.jc  imported.jc  module_import_test.jc  multiply.jc  nested_functions_test.jc  pointer_test.jc  proto_helloworld.jc  (+12 more)
